[tool.poetry]
name = "dasafio-cb"
version = "0.1.0"
description = ""
authors = ["Camilo Gabriel <camilo.gabrielrm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apache-airflow = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
